Adjusted the Java package name, fixed some of the warnings

--- a/app/src/main/res/layout/surface.xml
+++ b/app/src/main/res/layout/surface.xml
@@ -15,7 +15,7 @@ with code. If not, see http://www.gnu.org/licenses/.
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
-    <guardian.Surface
+    <altermarkive.guardian.Surface
         android:id="@+id/surface"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
