--- a/fall-detector/src/main/res/xml/preferences.xml
+++ b/fall-detector/src/main/res/xml/preferences.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="Guardian Settings">
+    <PreferenceCategory android:title="Fall Detector Settings">
         <Preference
             android:name="@string/summary"
             android:key="@string/contact"
