--- a/fall-detector/src/main/res/layout/eula.xml
+++ b/fall-detector/src/main/res/layout/eula.xml
@@ -14,8 +14,9 @@
 
     <Button
         android:id="@+id/accept"
+        style="?android:attr/buttonBarButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.01"
-        android:text="@string/ok" />
+        android:text="@string/accept" />
 </LinearLayout>
