--- a/fall-detector/src/main/res/xml/preferences.xml
+++ b/fall-detector/src/main/res/xml/preferences.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="Fall Detector Settings">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <PreferenceCategory
+        android:title="Fall Detector Settings"
+        app:iconSpaceReserved="false">
         <Preference
             android:name="@string/summary"
             android:key="@string/contact"
-            android:title="@string/title">
+            android:title="@string/title"
+            app:iconSpaceReserved="false">
             <intent android:action="altermarkive.guardian.Contact" />
         </Preference>
     </PreferenceCategory>
