--- a/tabs/src/main/res/layout/main.xml
+++ b/tabs/src/main/res/layout/main.xml
@@ -1,44 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    app:tabBackground="@android:color/white">
 
-    <TabHost
-        android:id="@android:id/tabhost"
+    <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:scrollbars="none"
+        app:tabBackground="@android:color/white">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:tabBackground="@android:color/white"
+            app:tabIndicatorColor="@color/purple_500"
+            app:tabSelectedTextColor="@color/purple_500"
+            app:tabTextColor="@android:color/black" />
 
-            <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollbars="none">
-
-                <TabWidget
-                    android:id="@android:id/tabs"
-                    android:layout_width="wrap_content"
-                    android:layout_height="64dp"
-                    android:tabStripEnabled="false" />
-            </HorizontalScrollView>
-
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        </LinearLayout>
-    </TabHost>
+    </HorizontalScrollView>
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="2.5dp"
-        android:contentDescription="@string/empty"
-        android:src="#FFFF0000" />
+        android:background="@color/purple_500"
+        android:contentDescription="@string/empty" />
+
+    <FrameLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1"
+        android:background="@android:color/white" />
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="2.5dp"
+        android:background="@color/purple_500"
+        android:contentDescription="@string/empty" />
 
     <TextView
         android:id="@+id/status"
