--- a/fall-detector/src/main/res/layout/signals.xml
+++ b/fall-detector/src/main/res/layout/signals.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frame"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:orientation="vertical"
     android:paddingBottom="?attr/actionBarSize"
     tools:context="altermarkive.guardian.Signals">
 
@@ -11,4 +13,16 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
-</LinearLayout>
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/live"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="10dp"
+        android:background="@color/white"
+        android:checked="true"
+        android:padding="20dp"
+        android:text="@string/live"
+        android:textColor="@android:color/black" />
+
+</FrameLayout>
